# portfolio_spdrs

./: .env  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt
dagster_pipelines/: __init__.py  definitions.py  workspace.yaml
data/: sector_portfolios--2025-05-13_23-14-58.csv  sector_portfolios--2025-05-13_23-32-43.csv  sector_portfolios--2025-05-13_23-34-23.csv  sector_portfolios--2025-05-13_23-34-27.csv  sector_portfolios--2025-05-13_23-34-31.csv  sector_portfolios--2025-05-13_23-34-34.csv  sector_portfolios--2025-05-13_23-34-38.csv  sector_portfolios--2025-05-13_23-34-52.csv  sector_portfolios--2025-05-13_23-34-55.csv  sector_portfolios--2025-05-13_23-34-58.csv  sector_portfolios--2025-05-13_23-35-03.csv  sector_portfolios--2025-05-13_23-35-14.csv  sector_portfolios--2025-05-13_23-35-17.csv  sector_portfolios--2025-05-13_23-35-20.csv  sector_portfolios--2025-05-13_23-35-23.csv  sector_portfolios--2025-05-13_23-35-25.csv  sector_portfolios--2025-05-13_23-39-08.csv  sector_portfolios--2025-05-13_23-39-11.csv  sector_portfolios--2025-05-13_23-39-13.csv  sector_portfolios--2025-05-13_23-39-16.csv  sector_portfolios--2025-05-13_23-39-19.csv  sector_portfolios--2025-05-13_23-39-31.csv  sector_portfolios--2025-05-13_23-39-35.csv  sector_portfolios--2025-05-13_23-39-38.csv  sector_portfolios--2025-05-13_23-39-41.csv  sector_portfolios--2025-05-13_23-39-45.csv  sector_portfolios--2025-05-13_23-40-01.csv  sector_portfolios--2025-05-13_23-40-04.csv  sector_portfolios--2025-05-13_23-40-07.csv  sector_portfolios--2025-05-13_23-40-12.csv  (+73 more)
data/cache/: SPY.pkl  (+26 more)
(+32 files in other folders)
