[project]
name = "portfolio_spdrs"
version = "0.1.0"
description = "22 indices for sector portfolios"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache 2.0" }
authors = [
    { name = "ValidityBase", email = "info@validitybase.com" }
]

[tool.isort]
# Avoid conflicts with black formatter.
profile = "black"

[tool.dagster]
module_name = "dagster_pipelines.definitions"
